--- a/src/styles/dark-mode-toggle.css
+++ b/src/styles/dark-mode-toggle.css
@@ -5,7 +5,7 @@
     width: var(--width);
     height: var(--height);
     right: 10px;
-    bottom: 10px;
+    top: 10px;
     border-radius: 40px;
 }
 
@@ -13,11 +13,6 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    margin: 0px;
     cursor: pointer;
     opacity: 0;
     z-index: 2;
@@ -25,14 +20,14 @@
 
 .toggle {
     position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     overflow: hidden;
     opacity: 1;
     background-color: var(--light-color);
-    box-shadow: 0px 2px 25px #d9d9d9;
+    box-shadow: 0 2px 25px #d9d9d9;
     border-radius: 40px;
     transition: 0.2s ease background-color, 0.2s ease opacity;
 }
