--- a/src/styles/yandex-search-engine.css
+++ b/src/styles/yandex-search-engine.css
@@ -1,7 +1,6 @@
 .yandex_search_engine {
-    width: 100%;
-    height: 100%;
-    border-collapse: collapse;
+    text-align: center;
+    margin: 30vh auto;
 }
 
 .yandex_search_form {
@@ -22,7 +21,7 @@
     border-radius: 0.75rem 0.625rem 0.625rem 0.75rem;
     border-style: solid;
     border-color: transparent;
-    background: #fff;
+    background-color: #f8f8f8;
     background-clip: content-box;
     color: #000;
 }
@@ -30,15 +29,13 @@
 .yandex_search_input_control {
     z-index: 3;
     width: 100%;
-    margin: 0;
     padding: 0;
     vertical-align: top;
     color: #000;
     border: 0 solid transparent;
     outline: 0;
     background: 0 0;
-    margin-top: -1px;
-    margin-bottom: 1px;
+    margin: -1px 0 1px;
     height: 42px;
     border-right-width: 40px;
     border-left-width: 11px;
@@ -74,7 +71,7 @@
     width: 180px;
     height: 70px;
     position: relative;
-    margin: 0 auto;
+    display: inline-block;
 }
 
 .yandex_logo.dark {
