--- a/src/styles/new-tab_yandex.css
+++ b/src/styles/new-tab_yandex.css
@@ -1,10 +1,12 @@
-.yandex_search_engine {
+.new-tab_yandex-search-engine {
+    width: 100%;
+    height: 40%;
     text-align: center;
-    margin: 30vh auto;
+    display: inline-block;
+    vertical-align: middle;
 }
 
-.yandex_search_form {
-    width: 80%;
+.new-tab_yandex-search-form {
     max-width: 600px;
     margin: 0 auto;
     border-collapse: collapse;
@@ -14,7 +16,7 @@
     border-radius: 0.625rem;
 }
 
-.yandex_search_input {
+.new-tab_yandex-search-input {
     vertical-align: top;
     width: 100%;
     border-width: 3px;
@@ -26,7 +28,7 @@
     color: #000;
 }
 
-.yandex_search_input_control {
+.new-tab_yandex-search-input-control {
     z-index: 3;
     width: 100%;
     padding: 0;
@@ -42,11 +44,11 @@
     font: 19px Arial, Helvetica, sans-serif;
 }
 
-.yandex_search_button {
+.new-tab_yandex-search-button {
     margin-left: -2px;
 }
 
-.yandex_search_button_theme {
+.new-tab_yandex-search-button-theme {
     font-size: 19px;
     border-radius: 0 10px 10px 0;
     height: 100%;
@@ -57,16 +59,16 @@
     border: 0;
 }
 
-.yandex_search_button_theme:focus {
+.new-tab_yandex-search-button-theme:focus {
     background: #f0bf00;
 }
 
-.yandex_search_button_text {
+.new-tab_yandex-search-button-text {
     padding: 0 25px;
     vertical-align: 2px;
 }
 
-.yandex_logo {
+.new-tab_yandex-logo {
     background-image: url("../svgs/ya-logo-black.svg");
     width: 180px;
     height: 70px;
@@ -74,14 +76,14 @@
     display: inline-block;
 }
 
-.yandex_logo.dark {
+.new-tab_yandex-logo.dark {
     background-image: url("../svgs/ya-logo-white.svg");
 }
 
-.yandex_logo.en_local {
+.new-tab_yandex-logo.en-local {
     background-image: url("../svgs/ya-logo-black-en.svg");
 }
 
-.yandex_logo.en_local.dark {
+.new-tab_yandex-logo.en-local.dark {
     background-image: url("../svgs/ya-logo-white-en.svg");
 }
