--- a/src/styles/new-tab_google.css
+++ b/src/styles/new-tab_google.css
@@ -1,6 +1,6 @@
 .new-tab_google-search-engine {
     width: 100%;
-    height: 50%;
+    height: 48%;
     text-align: center;
     display: inline-block;
     vertical-align: middle;
@@ -12,11 +12,17 @@
     display: flex;
     border: 1px solid #dfe1e5;
     border-radius: 24px;
+    box-shadow: 0 1px 6px rgba(32,33,36,0.06);
     width: auto;
     background-color: #f8f8f8;
 }
 
+.new-tab_google-search-form.shadow_dark {
+    box-shadow: 0 1px 10px rgba(255,255,255,0.2);
+}
+
 .new-tab_google-search-input {
+    display: flex;
     vertical-align: top;
     width: 100%;
     border-radius: 24px;
@@ -33,7 +39,6 @@
     outline: 0;
     background: 0 0;
     height: 42px;
-    border-right-width: 40px;
     border-left-width: 11px;
     font: 17px Arial, Helvetica, sans-serif;
 }
