--- a/src/styles/new-tab_duckduck.css
+++ b/src/styles/new-tab_duckduck.css
@@ -7,6 +7,7 @@
 }
 
 .new-tab_duckduckgo-search-form {
+    transition: 0.5s;
     max-width: 600px;
     margin: 0 auto;
     border: 1px solid rgba(0,0,0,0.15);
@@ -46,6 +47,7 @@
     border: 0 solid transparent;
     outline: 0;
     background: 0 0;
+    border-left-width: 11px;
     height: 38px;
     font: 19px Arial, Helvetica, sans-serif;
 }
@@ -55,6 +57,7 @@
 }
 
 .new-tab_duckduckgo-search-button-theme {
+    transition: 0.5s;
     font-size: 19px;
     border-radius: 4px;
     height: 100%;
@@ -66,6 +69,7 @@
 }
 .new-tab_duckduckgo-search-button-theme:hover,
 .new-tab_duckduckgo-search-button-theme:focus {
+    transition: 0.5s;
     background: #2950BF;
 }
 
@@ -78,6 +82,7 @@
 
 .new-tab_duckduckgo-logo.en-local,
 .new-tab_duckduckgo-logo {
+    transition: 1s;
     background-image: url("../svgs/duckduckgo-logo-black.svg");
     width: 199px;
     height: 160px;
@@ -88,6 +93,7 @@
 
 .new-tab_duckduckgo-logo.en-local.dark,
 .new-tab_duckduckgo-logo.dark {
+    transition: 1s;
     background-image: url("../svgs/duckduckgo-logo-white.svg");
 }
 
