--- a/src/styles/new-tab_selector.css
+++ b/src/styles/new-tab_selector.css
@@ -5,6 +5,7 @@
 }
 
 .new-tab_search-engine-selector-yandex {
+    transition: 1s;
     background-image: url("../svgs/ya-icon.svg");
     background-color: inherit;
     height: 20px;
@@ -14,6 +15,7 @@
 }
 
 .new-tab_search-engine-selector-google {
+    transition: 1s;
     background-image: url("../svgs/google-icon.svg");
     background-color: inherit;
     height: 20px;
@@ -24,6 +26,7 @@
 }
 
 .new-tab_search-engine-selector-duck {
+    transition: 1s;
     background-image: url("../svgs/duck-icon.svg");
     background-color: inherit;
     height: 20px;
@@ -34,5 +37,6 @@
 }
 
 .grey {
+    transition: 2s;
     filter: grayscale(100%);
 }
