--- a/src/styles/new-tab_duckduck.css
+++ b/src/styles/new-tab_duckduck.css
@@ -80,7 +80,7 @@
     color: #999;
 }
 
-.new-tab_duckduckgo-logo.en-local,
+.new-tab_duckduckgo-logo.en_local,
 .new-tab_duckduckgo-logo {
     transition: 1s;
     background-image: url("../svgs/duckduckgo-logo-black.svg");
@@ -91,7 +91,7 @@
     display: inline-block;
 }
 
-.new-tab_duckduckgo-logo.en-local.dark,
+.new-tab_duckduckgo-logo.en_local.dark,
 .new-tab_duckduckgo-logo.dark {
     transition: 1s;
     background-image: url("../svgs/duckduckgo-logo-white.svg");
