--- a/src/styles/new-tab_google.css
+++ b/src/styles/new-tab_google.css
@@ -64,7 +64,7 @@
     background-image: url("../svgs/search.svg");
 }
 
-.new-tab_google-logo.en-local,
+.new-tab_google-logo.en_local,
 .new-tab_google-logo {
     transition: 1s;
     background-image: url("../svgs/google-logo.svg");
@@ -75,7 +75,7 @@
 }
 
 .new-tab_google-logo.dark,
-.new-tab_google-logo.en-local.dark {
+.new-tab_google-logo.en_local.dark {
     transition: 1s;
     background-image: url("../svgs/google-logo.svg");
 }
