--- a/src/styles/new-tab_selector.css
+++ b/src/styles/new-tab_selector.css
@@ -14,6 +14,10 @@
     border: none;
 }
 
+.new-tab_search-engine-selector-yandex.en_local {
+    background-image: url("../svgs/ya-icon-en.svg");
+}
+
 .new-tab_search-engine-selector-google {
     transition: 1s;
     background-image: url("../svgs/google-icon.svg");
