--- a/src/styles/new-tab_duckduck.css
+++ b/src/styles/new-tab_duckduck.css
@@ -1,9 +1,19 @@
 .new-tab_duckduckgo-search-engine {
     width: 100%;
-    height: 76%;
+    height: 100%;
     text-align: center;
     display: inline-block;
-    vertical-align: middle;
+    position: relative;
+    top: 5%;
+
+}
+
+.new-tab_duckduckgo-search-link {
+    display: inline-flex;
+    position: relative;
+    top: 30px;
+    height: 170px;
+    width: 210px;
 }
 
 .new-tab_duckduckgo-search-form {
@@ -74,6 +84,7 @@
 }
 
 .new-tab_duckduckgo-search-button-text {
+    transition: 0.5s;
     padding: 0 15px;
     vertical-align: 2px;
     font: 20px Duckduck, emoji;
@@ -84,9 +95,9 @@
 .new-tab_duckduckgo-logo {
     transition: 1s;
     background-image: url("../svgs/duckduckgo-logo-black.svg");
-    width: 199px;
-    height: 160px;
-    margin-bottom: 15px;
+    width: 300px;
+    height: 200px;
+    margin-bottom: 16px;
     position: relative;
     display: inline-block;
 }
