--- a/src/styles/new-tab_google.css
+++ b/src/styles/new-tab_google.css
@@ -1,9 +1,19 @@
 .new-tab_google-search-engine {
     width: 100%;
-    height: 48%;
+    height: 100%;
     text-align: center;
     display: inline-block;
-    vertical-align: middle;
+    position: relative;
+    top: 5%;
+}
+
+.new-tab_google-search-link {
+    display: inline-flex;
+    position: relative;
+    top: 120px;
+    right: 5px;
+    height: 80px;
+    width: 215px;
 }
 
 .new-tab_google-search-form {
@@ -49,6 +59,7 @@
 }
 
 .new-tab_google-search-button-theme {
+    transition: 0.5s;
     font-size: 19px;
     margin-right: 5px;
     border-radius: 24px;
@@ -68,8 +79,9 @@
 .new-tab_google-logo {
     transition: 1s;
     background-image: url("../svgs/google-logo.svg");
-    width: 292px;
-    height: 92px;
+    width: 300px;
+    height: 200px;
+    margin-bottom: 16px;
     position: relative;
     display: inline-block;
 }
