--- a/src/styles/new-tab_selector.css
+++ b/src/styles/new-tab_selector.css
@@ -2,14 +2,15 @@
     display: flex;
     position: inherit;
     bottom: 10px;
+    z-index: 1;
 }
 
 .new-tab_search-engine-selector-yandex {
     transition: 1s;
     background-image: url("../svgs/ya-icon.svg");
     background-color: inherit;
-    height: 20px;
-    width: 20px;
+    height: 24px;
+    width: 24px;
     cursor:pointer;
     border: none;
 }
@@ -22,8 +23,8 @@
     transition: 1s;
     background-image: url("../svgs/google-icon.svg");
     background-color: inherit;
-    height: 20px;
-    width: 20px;
+    height: 24px;
+    width: 24px;
     margin-right: 5px;
     cursor:pointer;
     border: none;
@@ -33,8 +34,8 @@
     transition: 1s;
     background-image: url("../svgs/duck-icon.svg");
     background-color: inherit;
-    height: 20px;
-    width: 20px;
+    height: 24px;
+    width: 24px;
     margin-right: 5px;
     cursor:pointer;
     border: none;
