--- a/src/styles/new-tab_yandex.css
+++ b/src/styles/new-tab_yandex.css
@@ -1,9 +1,19 @@
 .new-tab_yandex-search-engine {
     width: 100%;
-    height: 40%;
+    height: 100%;
     text-align: center;
     display: inline-block;
-    vertical-align: middle;
+    position: relative;
+    top: 5%;
+}
+
+.new-tab_yandex-search-link {
+    display: inline-flex;
+    position: relative;
+    top: 140px;
+    right: 5px;
+    height: 60px;
+    width: 170px;
 }
 
 .new-tab_yandex-search-form {
@@ -67,6 +77,7 @@
 }
 
 .new-tab_yandex-search-button-text {
+    transition: 0.5s;
     padding: 0 25px;
     vertical-align: 2px;
 }
@@ -74,8 +85,9 @@
 .new-tab_yandex-logo {
     transition: 1s;
     background-image: url("../svgs/ya-logo-black.svg");
-    width: 172px;
-    height: 70px;
+    width: 300px;
+    height: 200px;
+    margin-bottom: 16px;
     position: relative;
     display: inline-block;
 }
