--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,7 @@
-@import "src/styles/constatnts/constants.css";
-@import "src/styles/new-tab/new-tab.css";
-@import "src/styles/new-tab/new-tab_duckduck.css";
-@import "src/styles/new-tab/new-tab_google.css";
-@import "src/styles/new-tab/new-tab_selector.css";
-@import "src/styles/new-tab/new-tab_toggle.css";
-@import "src/styles/new-tab/new-tab_yandex.css";
+@import "./constatnts/constants.css";
+@import "./new-tab/new-tab.css";
+@import "./new-tab/new-tab_duckduck.css";
+@import "./new-tab/new-tab_google.css";
+@import "./new-tab/new-tab_selector.css";
+@import "./new-tab/new-tab_toggle.css";
+@import "./new-tab/new-tab_yandex.css";
