--- a/src/styles/new-tab/new-tab_duckduck.css
+++ b/src/styles/new-tab/new-tab_duckduck.css
@@ -94,7 +94,7 @@
 .new-tab_duckduckgo-logo.en_local,
 .new-tab_duckduckgo-logo {
     transition: 1s;
-    background-image: url("src/svgs/duckduckgo-logo-black.svg");
+    background-image: url("../../svgs/duckduckgo-logo-black.svg");
     width: 300px;
     height: 200px;
     margin-bottom: 16px;
@@ -105,10 +105,10 @@
 .new-tab_duckduckgo-logo.en_local.dark,
 .new-tab_duckduckgo-logo.dark {
     transition: 1s;
-    background-image: url("src/svgs/duckduckgo-logo-white.svg");
+    background-image: url("../../svgs/duckduckgo-logo-white.svg");
 }
 
 @font-face {
     font-family: "Duckduck";
-    src: local("Duckduck"), url(src/fonts/ddg-serp-icons.woff) format('woff');
+    src: local("Duckduck"), url(../../fonts/ddg-serp-icons.woff) format('woff');
 }
