--- a/src/styles/new-tab/new-tab_toggle.css
+++ b/src/styles/new-tab/new-tab_toggle.css
@@ -1,4 +1,4 @@
-@import "src/styles/constatnts/constants.css";
+@import "../constatnts/constants.css";
 
 .new-tab_toggle-btn {
     position: fixed;
