--- a/src/styles/constatnts/constants.css
+++ b/src/styles/constatnts/constants.css
@@ -2,6 +2,8 @@
     --dark-color: #292c35;
     --light-color: #fff;
     --ya-color: #fc0;
+    --goo-color: #4285f4;
+    --guck-color: #DE5833;
     --width: 50px;
     --height: 20px;
 }
