--- a/src/styles/new-tab/new-tab_toggle.css
+++ b/src/styles/new-tab/new-tab_toggle.css
@@ -17,8 +17,9 @@
     opacity: 0;
     z-index: 2;
 }
-
-.new-tab_toggle {
+.new-tab_toggle-yandex,
+.new-tab_toggle-google,
+.new-tab_toggle-duckduckgo {
     position: absolute;
     top: 0;
     right: 0;
@@ -32,8 +33,12 @@
     transition: 0.2s ease background-color, 0.2s ease opacity;
 }
 
-.new-tab_toggle:before,
-.new-tab_toggle:after {
+.new-tab_toggle-yandex:before,
+.new-tab_toggle-google:before,
+.new-tab_toggle-duckduckgo:before,
+.new-tab_toggle-yandex:after,
+.new-tab_toggle-google:after,
+.new-tab_toggle-duckduckgo:after {
     content: "";
     position: absolute;
     border-radius: 50%;
@@ -44,32 +49,57 @@
     transition: 0.5s ease transform, 0.2s ease background-color;
 }
 
-.new-tab_toggle:before {
+.new-tab_toggle-yandex:before,
+.new-tab_toggle-google:before,
+.new-tab_toggle-duckduckgo:before {
     background-color: var(--light-color);
     transform: translate(-58px, 0px);
     z-index: 1;
 }
 
-.new-tab_toggle:after {
+.new-tab_toggle-yandex:after {
+    transition: 0.5s;
     background-color: var(--ya-color);
     transform: translate(8px, 0px);
     z-index: 0;
 }
 
-.new-tab_toggle-checkbox:checked + .new-tab_toggle {
+.new-tab_toggle-google:after {
+    transition: 0.5s;
+    background-color: var(--goo-color);
+    transform: translate(8px, 0px);
+    z-index: 0;
+}
+
+.new-tab_toggle-duckduckgo:after {
+    transition: 0.5s;
+    background-color: var(--guck-color);
+    transform: translate(8px, 0px);
+    z-index: 0;
+}
+
+.new-tab_toggle-checkbox:checked + .new-tab_toggle-yandex,
+.new-tab_toggle-checkbox:checked + .new-tab_toggle-google,
+.new-tab_toggle-checkbox:checked + .new-tab_toggle-duckduckgo {
     background-color: var(--dark-color);
 }
 
-.new-tab_toggle-checkbox:active + .new-tab_toggle {
+.new-tab_toggle-checkbox:active + .new-tab_toggle-yandex,
+.new-tab_toggle-checkbox:active + .new-tab_toggle-google,
+.new-tab_toggle-checkbox:active + .new-tab_toggle-duckduckgo {
     opacity: 0.5;
 }
 
-.new-tab_toggle-checkbox:checked + .new-tab_toggle:before {
+.new-tab_toggle-checkbox:checked + .new-tab_toggle-yandex:before,
+.new-tab_toggle-checkbox:checked + .new-tab_toggle-google:before,
+.new-tab_toggle-checkbox:checked + .new-tab_toggle-duckduckgo:before {
     background-color: var(--dark-color);
     transform: translate(33px, -3px);
 }
 
-.new-tab_toggle-checkbox:checked + .new-tab_toggle:after {
+.new-tab_toggle-checkbox:checked + .new-tab_toggle-yandex:after,
+.new-tab_toggle-checkbox:checked + .new-tab_toggle-google:after,
+.new-tab_toggle-checkbox:checked + .new-tab_toggle-duckduckgo:after {
     background-color: var(--light-color);
     transform: translate(calc(var(--width) * 0.76), 0px);
 }
