--- a/src/styles/new-tab/new-tab_yandex.css
+++ b/src/styles/new-tab/new-tab_yandex.css
@@ -1,10 +1,8 @@
 .new-tab_yandex-search-engine {
     width: 100%;
-    height: 100%;
     text-align: center;
-    display: inline-block;
     position: relative;
-    top: 5%;
+    bottom: 152px;
 }
 
 .new-tab_yandex-search-link {
