--- a/src/styles/constatnts/constants.css
+++ b/src/styles/constatnts/constants.css
@@ -6,4 +6,7 @@
     --guck-color: #DE5833;
     --width: 50px;
     --height: 20px;
+    --slow-transition: 1s;
+    --fast-transition: 0.5s;
+    --search-engine-selector-size: 32px;
 }
