--- a/src/styles/new-tab/new-tab.css
+++ b/src/styles/new-tab/new-tab.css
@@ -1,7 +1,7 @@
 @import "../constatnts/constants.css";
 
 .new-tab {
-    transition: 1s;
+    transition: var(--slow-transition);
     position: fixed;
     top: 0;
     left: 0;
@@ -14,6 +14,6 @@
 }
 
 .new-tab.dark {
-    transition: 1s;
+    transition: var(--slow-transition);
     background: var(--dark-color);
 }
