SNTCE-7 минорные изменения

--- a/src/static/styles/search-engine.less
+++ b/src/static/styles/search-engine.less
@@ -7,6 +7,8 @@
     justify-content: flex-end;
     position: relative;
     bottom: 50vh;
+    width: 40vw;
+    max-width: 560px;
 
     &_logo {
         display: flex;
@@ -81,7 +83,7 @@
     }
 
     &_form {
-        min-width: 40vw;
+        width: 100%;
         height: 42px;
         margin: 0 auto;
         display: flex;
