--- a/src/static/styles/styles.less
+++ b/src/static/styles/styles.less
@@ -1,5 +1,5 @@
 @import "constants";
-@import "dark-mode";
+@import "settings-menu";
 @import "new-tab";
 @import "search-engine-selector";
 @import "search-engine";
